Edited the about section but still all capitalized

--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 	<div class="about" id="about">
 		<div class="container">
 					<h3 class="w3l_head">About Me</h3>
-			<p class="w3ls_head_para">To have a growth oriented career, where I can contribute my knowledge, problem solving and analytical skills to the organization and integrate my experience through continuous learning and teamwork</p>
+			<p class="w3ls_head_para">I am currently working as a R & D ENGINEER in Mercedes-Benz, India. I have joined Mercedes-Benz in August 2019 and the journey has been pretty great so far.
+			I have had the experience of working on Software Development for Autonomous Driving Assistance Systems. I have over 1+ experience in Software Development and my skillset includes C/C++,
+			Java, Python, HTML, CSS, JavaScript, Bootstrap, etc.I am also a CodeChef Certified Data Structures & Algorithms - Specialist and my areas of interest include Image Processing, Software Engineering,
+			Machine Learning and Cloud Computing. That's me as an "ENGINEER".
+			</p>
 		<div class="w3l-grids-about">
 				<div class="col-md-5 w3ls-ab-right">
 					<div class="agile-about-right-img">
