--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 <link href="//fonts.googleapis.com/css?family=Gidugu" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet"/>
+
 </head>
 	
 <body>
@@ -118,7 +120,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 	<div class="about" id="about">
 		<div class="container">
 					<h3 class="w3l_head">About Me</h3>
-			<p class="w3ls_head_para">I am currently working as a R & D ENGINEER in Mercedes-Benz, India. I have joined Mercedes-Benz in August 2019 and the journey has been pretty great so far.
+			<p class="w3ls_head_para" style="font-family: 'Josefin Slab', serif;font-size:25px;text-align: justify;">I am currently working as a R & D ENGINEER in Mercedes-Benz, India. I have joined Mercedes-Benz in August 2019 and the journey has been pretty great so far.
 			I have had the experience of working on Software Development for Autonomous Driving Assistance Systems. I have over 1+ experience in Software Development and my skillset includes C/C++,
 			Java, Python, HTML, CSS, JavaScript, Bootstrap, etc.I am also a CodeChef Certified Data Structures & Algorithms - Specialist and my areas of interest include Image Processing, Software Engineering,
 			Machine Learning and Cloud Computing. That's me as an "ENGINEER".
