--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 				<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
 				<h4>My MISSION.</h4>
-				<p>Nam aliquam pretium feugiat. Duis sem est, viverra eu interdum ac, 
-					suscipit nec mauris. Suspendisse commodo tempor sagittis</p>
+				<p>To have a growth oriented career, where I can contribute my knowledge and
+						problem  solving skills to the organization and integrate my experience through continuous
+						learning and teamwork.</p>
 			</div>
 
 			<div class="clearfix"></div>			
