update mission statement in services section

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 <link href="//fonts.googleapis.com/css?family=Gidugu" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic,800,800italic' rel='stylesheet' type='text/css'>
 
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+
+
 </head>
 	
 <body>
@@ -181,8 +183,8 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 			</div>
 				<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-				<h4>My MISSION.</h4>
-				<p>To have a growth oriented career, where I can contribute my knowledge and
+				<h4 style="font-family: 'Josefin Slab', serif;">My MISSION</h4>
+				<p style="font-family: 'Josefin Slab', serif; font-size:14px;">To have a growth oriented career, where I can contribute my knowledge and
 						problem  solving skills to the organization and integrate my experience through continuous
 						learning and teamwork.</p>
 			</div>
