--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
 
 
 </head>
@@ -184,7 +185,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 				<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
 				<h4 style="font-family: 'Josefin Slab', serif;">My MISSION</h4>
-				<p style="font-family: 'Josefin Slab', serif; font-size:14px;">To have a growth oriented career, where I can contribute my knowledge and
+				<p style="font-family: 'Source Sans Pro', sans-serif; font-size:14px;">To have a growth oriented career, where I can contribute my knowledge and
 						problem  solving skills to the organization and integrate my experience through continuous
 						learning and teamwork.</p>
 			</div>
@@ -202,24 +203,24 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 			  <div class="education-agile-grids">
 				  <div class="education-agile-w3l">
 				     <div class="education-agile-w3l-year">
-					       <h4>2014-2015</h4>
-						   <h6>Master Degree</h6>
+					       <h4>2017-2019</h4>
+						   <h6>Master's Degree</h6>
 				     </div>
 					 <div class="education-agile-w3l-info">
-					       <h4>COMPUTER UNIVERSITY</h4>
-						   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa..</p>
+					       <h4>JADAVPUR UNIVERSITY</h4>
+						   <p style="font-family: 'Source Sans Pro', sans-serif;font-size:18px;">M.E. in Computer Science & Engineering</p>
 						  
 				     </div>
 				      <div class="clearfix"></div>
 				  </div>
 				  <div class="education-agile-w3l two">
 				     <div class="education-agile-w3l-year">
-					       <h4>2010-2012</h4>
-						   <h6>Master Degree</h6>
+					       <h4>2013-2017</h4>
+						   <h6>Bachelor's Degree</h6>
 				     </div>
 					 <div class="education-agile-w3l-info">
-					       <h4>COMPUTER UNIVERSITY</h4>
-						   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa..</p>
+					       <h4>MEGHNAD SAHA INSTITUTE OF TECHNOLOGY</h4>
+						   <p style="font-family: 'Source Sans Pro', sans-serif;font-size:18px;">B.Tech in Computer Science & Engineering</p>
 						  
 				     </div>
 				      <div class="clearfix"></div>
