--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=DM+Mono&display=swap" rel="stylesheet">
 
 
 </head>
@@ -172,20 +174,21 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 			
 			<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-cog" aria-hidden="true"></i>
-				<h4>WHY CHOOSE Me.</h4>
-				<p>Nam aliquam pretium feugiat. Duis sem est, viverra eu interdum ac, 
-					suscipit nec mauris. Suspendisse commodo tempor sagittis</p>
+				<h4>WHY CHOOSE Me</h4>
+				<p style="font-family: 'DM Mono', monospace; font-size:16px;">Highly motivated Software Engineer with great Leadership skills</p>
 			</div>
 			<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-laptop" aria-hidden="true"></i>
 				<h4>WHAT I DO. </h4>
-				<p>Nam aliquam pretium feugiat. Duis sem est, viverra eu interdum ac, 
-					suscipit nec mauris. Suspendisse commodo tempor sagittis</p>
+				<p style="font-family: 'DM Mono', monospace; font-size:16px;">Bascially I am a Software Engineer but I have immense interest in Finance.
+				   So I like to call myself a "Finance Engineer" because I am here to help you
+				   with your financial problems with an Engineering approach.
+				</p>
 			</div>
 				<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
-				<h4 style="font-family: 'Josefin Slab', serif;">My MISSION</h4>
-				<p style="font-family: 'Source Sans Pro', sans-serif; font-size:14px;">To have a growth oriented career, where I can contribute my knowledge and
+				<h4>My MISSION</h4>
+				<p style="font-family: 'DM Mono', monospace; font-size:16px;">To have a growth oriented career, where I can contribute my knowledge and
 						problem  solving skills to the organization and integrate my experience through continuous
 						learning and teamwork.</p>
 			</div>
