Services Section font edit and Skill edit

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@600&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Spectral:wght@200&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Spectral:wght@300&display=swap" rel="stylesheet">
 
 
 </head>
@@ -178,7 +178,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 			</div>
 			<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-laptop" aria-hidden="true"></i>
-				<h4>WHAT I DO. </h4>
+				<h4>WHAT I DO </h4>
 				<p style="font-family: 'Spectral', serif; font-size:16px;">Bascially I am a Software Engineer but I have immense interest in Finance.
 				   So I like to call myself a "Finance Engineer" because I am here to help you
 				   with your financial problems with an Engineering approach.
@@ -227,29 +227,16 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 				     </div>
 				      <div class="clearfix"></div>
 				  </div>
-				  <div class="education-agile-w3l">
-				     <div class="education-agile-w3l-year">
-					       <h4>2008-2010</h4>
-						   <h6>Master Degree</h6>
-				     </div>
-					 <div class="education-agile-w3l-info">
-					       <h4>COMPUTER UNIVERSITY</h4>
-						  						   <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa..</p>
-						  
-				     </div>
-				      <div class="clearfix"></div>
-				  </div>
-				 
 			  </div>
 		</div>
 		<div class="col-md-6 skills">
 		<h3 class="w3l_head two">My Skills</h3>
 	     <div class="skill-agile">
 						<div class='bar_group'>
-						<div class='bar_group__bar thin elastic' label='HTML' value='230'></div>
-						<div class='bar_group__bar thin elastic' label='Css3' value='130'></div>
-						<div class='bar_group__bar thin elastic' label='Js' value='160'></div>
-						<div class='bar_group__bar thin elastic' label='Php' value='340'></div>
+						<div class='bar_group__bar thin elastic' label='Python' value='230'></div>
+						<div class='bar_group__bar thin elastic' label='Java' value='130'></div>
+						<div class='bar_group__bar thin elastic' label='C' value='160'></div>
+						<div class='bar_group__bar thin elastic' label='SQL' value='340'></div>
 					</div>
 
 						</div>
@@ -263,17 +250,17 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 		<h3 class="w3l_head two">More Skills</h3>
 	     <div class="skill-agile">
 			<div class="col-sm-4 abt-gd-left text-center">
-			<div id="demo-pie-1" class="pie-title-center" data-percent="25"> <span class="pie-value"></span> </div>
-			<h4>HTML</h4>
+			<div id="demo-pie-1" class="pie-title-center" data-percent="80"> <span class="pie-value"></span> </div>
+			<h4>Full Stack Web Development</h4>
 		</div>
 		
 		<div class="col-sm-4 abt-gd-left text-center">		   
 			<div id="demo-pie-3" class="pie-title-center" data-percent="75"> <span class="pie-value"></span> </div>
-			<h4>Java Script</h4>
+			<h4>Machine Learning</h4>
 		</div>
 		<div class="col-sm-4 abt-gd-left text-center">		   
-			<div id="demo-pie-4" class="pie-title-center" data-percent="15"> <span class="pie-value"></span> </div>
-			<h4>UI/UX Designer</h4>
+			<div id="demo-pie-4" class="pie-title-center" data-percent="60"> <span class="pie-value"></span> </div>
+			<h4>Software Testing</h4>
 		</div>
 		<div class="clearfix"></div>
 </div>
