--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 			<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-cog" aria-hidden="true"></i>
 				<h4>WHY CHOOSE Me</h4>
-				<p style="font-family: 'Spectral', serif; font-size:16px;">Highly motivated Software Engineer with great Leadership skills</p>
+				<p >Highly motivated Software Engineer with great Leadership skills</p>
 			</div>
 			<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-laptop" aria-hidden="true"></i>
 				<h4>WHAT I DO </h4>
-				<p style="font-family: 'Spectral', serif; font-size:16px;">Bascially I am a Software Engineer but I have immense interest in Finance.
+				<p >Bascially I am a Software Engineer but I have immense interest in Finance.
 				   So I like to call myself a "Finance Engineer" because I am here to help you
 				   with your financial problems with an Engineering approach.
 				</p>
@@ -187,7 +187,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 				<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
 				<h4>My MISSION</h4>
-				<p style="font-family: 'Spectral', serif; font-size:16px;">To have a growth oriented career, where I can contribute my knowledge and
+				<p >To have a growth oriented career, where I can contribute my knowledge and
 						problem  solving skills to the organization and integrate my experience through continuous
 						learning and teamwork.</p>
 			</div>
