--- a/index.html
+++ b/index.html
@@ -187,9 +187,11 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 				<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-thumbs-o-up" aria-hidden="true"></i>
 				<h4>My MISSION</h4>
-				<p >To have a growth oriented career, where I can contribute my knowledge and
-						problem  solving skills to the organization and integrate my experience through continuous
-						learning and teamwork.</p>
+				<p >I am currently working as a R & D ENGINEER in Mercedes-Benz, India. I have joined Mercedes-Benz in August 2019 and the journey has been pretty great so far. 
+				I have had the experience of working on Software Development for Autonomous Driving Assistance Systems. 
+				I have over 1+ experience in Software Development and my skillset includes C/C++, Java, Python, HTML, CSS, JavaScript, Bootstrap, etc.
+				I am also a CodeChef Certified Data Structures & Algorithms - Specialist and my areas of interest include Image Processing, Software Engineering, Machine Learning and Cloud Computing. 
+				That's me as an "ENGINEER".</p>
 			</div>
 
 			<div class="clearfix"></div>			
