editing the about section

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 		<div class="container">
 					<h3 class="w3l_head">About Me</h3>
 					<br>
-					<p class="w3ls_head_para" style="font-family: 'Source Sans Pro', sans-serif;font-size:22px;text-align: justify;text-transform: none;">I am currently working as a R & D ENGINEER in Mercedes-Benz, India. I have joined Mercedes-Benz in August 2019 and the journey has been pretty great so far.
+					<p class="w3ls_head_para" style="font-size:22px;text-align: justify;text-transform: none;">I am currently working as a R & D ENGINEER in Mercedes-Benz, India. I have joined Mercedes-Benz in August 2019 and the journey has been pretty great so far.
 					I have had the experience of working on Software Development for Autonomous Driving Assistance Systems. I have over 1+ experience in Software Development and my skillset includes C/C++,
 					Java, Python, HTML, CSS, JavaScript, Bootstrap, etc.I am also a CodeChef Certified Data Structures & Algorithms - Specialist and my areas of interest include Image Processing, Software Engineering,
 					Machine Learning and Cloud Computing. That's me as an "ENGINEER".
