--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 				     </div>
 					 <div class="education-agile-w3l-info">
 					       <h4>JADAVPUR UNIVERSITY</h4>
-						   <p class="w3ls_head_para" style="font-size:13px;">M.E. in Computer Science & Engineering</p>
+						   <p class="w3ls_head_para" style="font-size:13px;">M.TECH in Computer Science & Engineering</p>
 						  
 				     </div>
 				      <div class="clearfix"></div>
