editing the about-me desc section

--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@ Smartphone Compatible web template, free web designs for Nokia, Samsung, LG, Son
 				<div class="col-md-7 w3ls-agile-left">
 					<div class="w3ls-agile-left-info">
 						<h4>Job Title</h4>
-						<p class="w3ls_head_para" style="font-size:11px;">R & D ENGINEER</p>
+						<p class="w3ls_head_para" style="font-size:11px;text-align:left;color:black;">R & D ENGINEER</p>
 					</div>
 					<div class="w3ls-agile-left-info">
 						<h4>Name</h4>
-						<p class="w3ls_head_para" style="font-size:11px;">RANIT DEY</p>
+						<p class="w3ls_head_para" style="font-size:11px;text-align:left;color:black;">RANIT DEY</p>
 					</div>
 					<div class="w3ls-agile-left-info">
 						<h4>Sex</h4>
-						<p class="w3ls_head_para" style="font-size:11px;">MALE</p>
+						<p class="w3ls_head_para" style="font-size:11px;text-align:left;color:black;">MALE</p>
 					</div>
 					<div class="w3ls-agile-left-info">
 						<h4>Address</h4>
-						<p class="w3ls_head_para" style="font-size:11px;"> 707, 19th Cross Rd BEML Layout 6th Stage, Thubarahalli, Brookefield Bengaluru, Karnataka 560066</p>
+						<p class="w3ls_head_para" style="font-size:11px;text-align:left;color:black;"> 707, 19th Cross Rd BEML Layout 6th Stage, Thubarahalli, Brookefield Bengaluru, Karnataka 560066</p>
 					</div>
 					<div class="w3ls-agile-left-info">
 						<h4>Email Address</h4>
